maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:101: error: not found: value L
  if (x+1<L && droite<min && !estFaceMur()){
          ^ShortestPathMaze:113: error: not found: value L
  if (y+1<L && bas<min && !estFaceMur()){
          ^